--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body{
 }
 
 header{
-    width: 85%;
-    height: 95%;
+    width: 100%;
+    height: 100%;
     border: 1px solid #fff;
     display: flex;
     flex-wrap: wrap;
@@ -26,7 +26,7 @@ header{
 
 header .menu_side, .song_side{
     position: relative;
-    width: 25%;
+    width: 20%;
     height: 90%;
     /* border: 1px solid #fff; */
     background-color: #111727;
@@ -35,7 +35,7 @@ header .menu_side, .song_side{
 }
 
 header .song_side{
-    width: 75%;
+    width: 80%;
     background: #0b1320;
     
 
@@ -50,9 +50,9 @@ header .master_play{
 }
 
 header .menu_side h1{
-    font-size: 20px;
+    font-size: 30px;
     margin: 15px 0px 0px 20px;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 header .menu_side .Playlist{
@@ -60,11 +60,13 @@ header .menu_side .Playlist{
 }
 
 header .menu_side .Playlist h4{
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 400;
     padding-bottom:10px;
     color: #4c5262;
     cursor: pointer;
+    display: flex;
+    align-items: center;
     transition: .3s linear;
 }
 
@@ -75,6 +77,7 @@ header .menu_side .Playlist h4:hover{
 
 header .menu_side .Playlist h4 span{
     position: relative;
+    margin-right: 35px;
   
   }
   
@@ -85,5 +88,46 @@ header .menu_side .Playlist h4 span::before{
     height: 4px;
     border: 2px solid #4c5262;
     border-radius: 50%;
+    top: -4;
+    transition: .3s linear;
   
   }
+
+  header .menu_side .Playlist h4:hover span::before{
+    border: 2px solid #fff;
+  }
+
+  header .menu_side .Playlist h4 .bi{
+    display: none;
+  }
+
+  header .menu_side .Playlist .active{
+    color: #36e2ec;
+  }
+
+  header .menu_side .Playlist .active span{
+    display: none;
+  }
+
+  header .menu_side .Playlist .active .bi{
+    display: flex;
+    margin-right: 20px;
+  }
+
+  header .menu_side .menu_song{
+    width: 100%;
+    height:610px;
+    border: 1px solid #fff;
+    margin-top: 30px;
+  }
+
+  header .menu_side .menu_song li{
+   list-style-type: none;
+   padding: 10px 0px 5px 20px;
+  }
+
+  header .menu_side .menu_song li span{
+    font-size: 12px;
+    font-weight: 600;
+    color: #4c5262;
+   }
